# fielder

./: Cargo.toml  README.md  deny.toml
.github/workflows/: deny.yml  release.yml
crates/fielder/: CHANGELOG.md  Cargo.toml  README.md
crates/fielder-proc/: CHANGELOG.md  Cargo.toml  README.md
crates/fielder-proc/src/: bitfield.rs  lib.rs
crates/fielder-proc/tests/: integration.rs
crates/fielder/src/: lib.rs  traits.rs
crates/fielder/tests/: integration.rs
src/: lib.rs  traits.rs
