[package]
name = "fielder"
version = "0.1.2"
edition = "2021"

description = "Efficient and precise bitfields"
categories = ["no-std"]
keywords = ["no_std", "bitflag", "bitfield"]
repository = "https://github.com/jack-weilage/fielder"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
fielder-proc = { path = "../fielder-proc", version = "0.1.1" }

[lints]
workspace = true
