[package]
name = "fielder"
version = "0.2.1"
edition = "2021"

description = "Efficient and precise bitfields"
categories = ["no-std"]
keywords = ["no_std", "bitflag", "bitfield"]
repository = "https://github.com/jack-weilage/fielder"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
fielder-proc = { path = "../fielder-proc", version = "0.1.3" }

[dev-dependencies]
defmt = "0.3.10"

[features]
defmt = ["fielder-proc/defmt"]

[lints]
workspace = true
